# Lumora

./: .gitignore  README.md  index.html  lumora_dock_prototype.html  package-lock.json  package.json  remove_bg.py  vite.config.ts
docs/: dock-and-wechat-troubleshooting.md
docs/product/: lumora-dev-ready-product-plan.md
docs/superpowers/plans/: 2026-06-25-lumora-dock-launcher-window-redesign.md  2026-06-25-lumora-tauri-mvp.md
docs/superpowers/specs/: 2026-06-25-lumora-dock-launcher-window-redesign.md  2026-06-25-lumora-glass-desktop-product-plan.md  2026-06-25-lumora-product-design.md
src/: App.css  App.test.tsx  App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
src/components/: DockSurface.test.tsx  DockSurface.tsx  LauncherSurface.test.tsx  LauncherSurface.tsx
src/lib/: desktopOrganizer.test.ts  desktopOrganizer.ts  dockDropPosition.test.ts  dockDropPosition.ts  dockItems.test.ts  dockItems.ts  native.test.ts  native.ts  shortcutSlots.test.ts  shortcutSlots.ts  storage.test.ts  storage.ts  tauriConfig.test.ts  windowSurface.test.ts  windowSurface.ts
