[package]
name = "lumora"
version = "0.1.0"
description = "Lumora desktop client"
authors = ["KiraKira-77"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = ["protocol-asset"] }
tauri-plugin-global-shortcut = "2.3.2"
image = { version = "0.25", default-features = false, features = ["png"] }
windows-sys = { version = "0.61", features = [
  "Win32_Foundation",
  "Win32_Graphics_Gdi",
  "Win32_Storage_FileSystem",
  "Win32_UI_Shell",
  "Win32_UI_WindowsAndMessaging"
] }
tauri-plugin-fs = "2.5.1"
parselnk = "0.1.1"
windows = { version = "0.62.2", features = ["Win32_Storage_FileSystem", "Win32_System_Com", "Win32_UI_Shell", "Win32_UI_WindowsAndMessaging"] }
